<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">欧拉MBA</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kTabBarTitle0">页A</string>
    <string name="kTabBarTitle1">页B</string>
    <string name="kTabBarTitle2">页C</string>
    <string name="kTabBarTitle3">页D</string>
    <string name="kTabBarTitle4">页E</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="app_tip">提示</string>
    <string name="stop">暂停</string>
    <string name="resume">继续</string>
    <string name="retry">重试</string>
    <string name="remove">删除</string>

    <!-- PayActivity -->
    <string name="pay_by_wx">通过微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="cancel_message">取消</string>
    <string name="confirm_message">确认</string>
    <string name="special">专题</string>
    <string name="send">发送</string>
    <string name="request_running">数据请求中，请稍候......</string>
    <string name="request_failed">数据加载失败，请稍候再试</string>
    <string name="data_request_fail">数据请求失败</string>
    <string name="study_record">%s学习记录</string>
    <string name="ola_circle">欧拉圈</string>
    <string name="title_activity_question_result">答题报告</string>
    <string name="play_fail_no_found_path">播放失败，找不到播放路径</string>
    <string name="play_fail_open_other_video">播放失败，请尝试其它视频</string>
    <string name="alipay_notuse">暂时不支持支付宝支付</string>
    <string name="wechat_not_install">您手机未安装微信</string>
    <string name="alipay_not_install">您手机未安装支付宝</string>
    <string name="pay_num">购买人数%s人</string>
    <string name="course">课程</string>
    <string name="num_watch">%s观看</string>
    <string name="num_knowledge">%s个知识点</string>
    <string name="rmb_mark">¥</string>
    <string name="math">数学</string>
    <string name="has_study">学习了:</string>
    <string name="me">我</string>
    <string name="vip_package">会员套餐</string>
    <string name="super_value">超值</string>
    <string name="pay_style">支付方式</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="vip_privilege">会员特权</string>
    <string name="numbers_course">2000+课程</string>
    <string name="all_free">全免费</string>
    <string name="video_cache">视频缓存</string>
    <string name="sign_up_preferential">报名优惠</string>
    <string name="open_vip">开通会员</string>
    <string name="knowledges">知识型谱</string>
    <string name="vip">VIP会员</string>
    <string name="course_collect">课程收藏</string>
    <string name="download">下载</string>
    <string name="num_buy">%s人购买</string>
    <string name="buy_course">购买课程</string>
    <string name="has_answer_subject">已答题目</string>
    <string name="correct_percent">正确率</string>
    <string name="win_student">打败考生</string>
    <string name="all_number_subject">/%s道</string>
    <string name="get_knowledge_fail">获取知识点对应的课程失败</string>
    <string name="click_login">点击登录</string>
    <string name="login_before_view_study_record">亲爱的用户请先登录后再查看学习记录</string>
    <string name="video_detail">视频详情</string>
    <string name="to_login">登录后才能查看，是否去登录？</string>
    <string name="sure_uncollect">是否取消收藏</string>
    <string name="buy_now">立即购买</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="num_buys">%s人购买</string>
    <string name="pay_now">立即支付</string>
    <string name="title_activity_doadload_list">DoadloadListActivity</string>

    <string name="title_activity_deploy_post">欧拉动态</string>
    <string name="publish">发布</string>
    <string name="hint_deploy_title">标题 2-15个字</string>
    <string name="hint_deploy_content">说说您的备考经验</string>
    <string name="hint_deploy_comment">内容 2-140个字</string>
    <string name="location">所在位置</string>
    <string name="positioning">定位中...</string>
    <string name="no_comment_self">不能评论自己哟</string>
    <string name="fill_comment_content">请填写评论内容</string>
    <string name="my_question">我要提问</string>
    <string name="find_teacher">我找老师</string>
    <string name="find_data">我找资料</string>
    <string name="join_group">我要入群</string>
    <string name="newest_answer">最新问答</string>
    <string name="num_to_listen_in">%s人收听</string>
    <string name="direct_broadcast_hall">直播大厅</string>
    <string name="listView_footer_hint_normal">查看更多</string>
    <string name="month">%s月</string>
    <string name="data_base">资料库</string>
    <string name="course_database">课程库</string>
    <string name="invitation_friend_join">邀请好友加入</string>
    <string name="group_name">群名</string>
    <string name="introduction">简介</string>
    <string name="group_notice">群公告</string>
    <string name="group_member">群成员</string>
    <string name="work_history">作业历史</string>
    <string name="dissolution_group">解散群</string>
    <string name="share_group_or_tell_group_num">分享入群邀请或告知学生群号</string>
    <string name="write_group_name">填写群名称（2-10个字）</string>
    <string name="write_group_intro">填写群简介（0-150个字）</string>
    <string name="my_homework">我的作业</string>
    <string name="loading_text">下载中&#8230;</string>
    <string name="need_sd">需要sd卡</string>
    <string name="no_handout">暂无讲义</string>
    <string name="catalog_text">目录</string>
    <string name="handout_text">讲义</string>
    <string name="service_olaxueyuan_com">service@olaxueyuan.com</string>
    <string name="wrong_topic_text">错题本</string>
    <string name="vip_buy_text">欧拉会员</string>
    <string name="vip_money_38">38元/月</string>
    <string name="my_buy_text">我的购买</string>
    <string name="my_collect_text">我的收藏</string>
    <string name="my_download_text">我的下载</string>
    <string name="service_email_text">客服邮箱</string>
    <string name="feedback">反馈</string>
    <string name="wechat_friends">微信</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="qq_friend">QQ好友</string>
    <string name="qq_space">QQ空间</string>
    <string name="sina_blog">微博</string>
    <string name="share_to_friends">快分享给小伙伴吧</string>
    <string name="edit_group_data">编辑群资料</string>
    <string name="group_name_not_null">群名称不能为空</string>
    <string name="login_time_out">登录失效，请重新登录</string>
    <string name="upload_avatar_success">上传头像成功!</string>
    <string name="upload_avatar_fail">图片上传失败</string>
    <string name="free">免费</string>
    <string name="hot">热门</string>
    <string name="newest">最新</string>
    <string name="english">英语</string>
    <string name="logic">逻辑</string>
    <string name="writing">写作</string>
    <string name="exchange">兑换</string>
    <string name="pay_twenty_coin">兑换该套题将消耗您20欧拉币</string>
    <string name="get_coin_ing">正在获取积分，请稍后</string>
    <string name="today_get_coin">今日获得%s欧拉币</string>
    <string name="has_sign">已签到</string>
    <string name="sign">签到</string>
    <string name="has_complete">已完成</string>
    <string name="to_perfect">去完善</string>
    <string name="to_set">去设置</string>
    <string name="to_buy">去购买</string>
    <string name="ola_coin_detail">欧拉币明细</string>
    <string name="coin">欧拉币</string>
    <string name="daily_task">每日任务</string>
    <string name="today_sign">今日签到</string>
    <string name="share">分享</string>
    <string name="novice_task">新手任务</string>
    <string name="ola_coin_rule">欧拉币规则</string>
    <string name="request_group_fail">请求群列表失败</string>
    <string name="no_create_group">暂无创建的作业群</string>
    <string name="no_group_to_create">您还没有创建作业群，去创建一个吧!</string>
    <string name="no_homework">暂无已布置作业</string>
    <string name="watch_library_to_publish_homework">看看题库，给学生们布置作业吧！</string>
    <string name="create_study_group">创建学习群</string>
    <string name="student_complete_info">学生完成情况</string>
    <string name="complete_info">完成情况</string>
    <string name="to_end">你已在地球的底端</string>
    <string name="detail">详情</string>
    <string name="my_to_enrol">我要报名</string>
    <string name="no_audio_permission">没有录音权限,请到手机的“设置”里面打开应用的录音权限。</string>
    <string name="scroll_up_cancel_send">上滑取消</string>
    <string name="release_cancel_send">松开取消</string>
    <string name="time_too_short">时间太短</string>
    <string name="say_limit">还可以说%s秒</string>
    <string name="pending_deal_comment">%d条待处理评论</string>
    <string name="num_praise">%d个赞</string>
    <string name="pending_deal_system_info">%d条待处理系统消息</string>
    <string name="photo">选择相册</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="course_list">课程列表</string>
    <string name="month_vip_price">月度黄金会员%s元</string>
    <string name="season_vip_price">季度黄金会员%s元</string>
    <string name="half_year_vip_price">半年黄金会员%s元</string>
    <string name="all_year_vip_price">一年黄金会员%s元</string>
    <string name="qq_study_group_name">QQ学习群</string>
    <string name="qq_group_num_text">群号码：162489337</string>
    <string name="qq_group_num">162489337</string>
    <string name="study_progress">学习进度</string>
    <string name="ask_question">提问</string>
    <string name="come_on_2018">加油，2018年！</string>
    <string name="my_information">我的消息</string>
    <string name="reward_money">入群送50欧拉币</string>
    <string name="no_data">暂无数据</string>
    <string name="ask_now">立即咨询</string>
    <string name="all_select">全选</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="download_counts">下载(%s)</string>
    <string name="not_found_download_video_url">找不到%s视频下载路径</string>
    <string name="no_select_download_video">您还未选中要下载的视频</string>

</resources>
