<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:paddingBottom="18dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="18dp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/put_question_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white_item_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/home_question_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/my_question"
            android:textColor="@color/normal_text_color"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_teacher_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white_item_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/home_enroll_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/my_to_enrol"
            android:textColor="@color/normal_text_color"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_data_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white_item_bg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/home_find_data_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/find_data"
            android:textColor="@color/normal_text_color"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/find_data_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_white_item_bg"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:scaleType="fitXY"
                android:src="@drawable/my_lenchat_info_icon" />

            <ImageView
                android:id="@+id/chat_message_dot"
                android:layout_width="@dimen/dp_6"
                android:layout_height="@dimen/dp_6"
                android:layout_gravity="right"
                android:src="@drawable/ret_dot_shape"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/my_information"
            android:textColor="@color/normal_text_color"
            android:textSize="12dp" />
        <!--android:text="@string/join_group"-->
    </LinearLayout>
</LinearLayout>
